--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,28 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+		    <groupId>io.helidon.integrations.cdi</groupId>
+		    <artifactId>helidon-integrations-cdi-datasource-hikaricp</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>io.helidon.media</groupId>
+            <artifactId>helidon-media-jsonp</artifactId>
+			<version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8-production</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
             <groupId>io.helidon.microprofile</groupId>
             <artifactId>helidon-microprofile-cors</artifactId>
         </dependency>
+        <dependency>
+		    <!-- general support for tracing -->
+		    <groupId>io.helidon.microprofile.tracing</groupId>
+		    <artifactId>helidon-microprofile-tracing</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
