--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <relativePath/>
     </parent>
     <groupId>io.helidon.examples</groupId>
-    <artifactId>helidon-quickstart-mp</artifactId>
+    <artifactId>helidon-quickstart-mp-8080</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>myproject</name>
 
